# fast-api-scrapping-news

./: Dockerfile  main.py  pyproject.toml  routers.py
app/: main.py  routers.py  scrapping.py
