[tool.poetry]
name = "fast-api-scrapping-news"
version = "0.1.0"
description = ""
authors = ["Carolina Naciff <carolinanaciff@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
requests = "^2.31.0"
uvicorn = "^0.28.0"
pandas = "^2.2.1"
bs4 = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
